# cardano-lightning-hs

./: .gitignore  LICENCE  cabal.project  errors.txt  flake.nix  open.sh
cardano-lightning/: cardano-lightning.cabal
cardano-lightning/app/: Main.hs
cardano-lightning/app/CardanoLightning/Commands/: Build.hs
cardano-lightning/contrib/CardanoLightning/Contrib/Cardano/: Api.hs  InMemory.hs
cardano-lightning/contrib/CardanoLightning/Contrib/Data/: Aeson.hs  Foldable.hs
cardano-lightning/test/CardanoLightning/Transaction/: ValidatorSpec.hs
cardano-lightning/test/Fixtures/: stage.json
cardano-lightning/transaction/CardanoLightning/: Transaction.hs
cardano-lightning/transaction/CardanoLightning/Transaction/: AUTxO.hs  Validator.hs
nix/: outputs.nix  process-compose-yaml.nix  project.nix  shell.nix
nix/scripts/: mk-wallet.py  publish-script.sh
testnet/configuration/defaults/: db-sync-config.json
testnet/configuration/defaults/byron-mainnet/: configuration.yaml
testnet/scripts/babbage/: alonzo-babbage-test-genesis.json  conway-babbage-test-genesis.json  mkfiles.sh
